# cross_stitch_pattern_maker

./: CMakeLists.txt  README.md  colors.txt  gl_includes.hpp  main.cpp  pattern.cpp  pattern.hpp
symbols/: w.png~
